// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of Tooltip location bottom 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="bottom"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-tooltip tooltip tooltipBottom tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleBottom"
      contentEditable={false}
      direction="up"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#ffe11a",
          }
        }
      >
        <Triangle__SVGView
          className="ui-triangle tooltipTriangleBottom"
          contentEditable={false}
          direction="up"
          disabled={false}
          focus={false}
          height=""
          id=""
          location="none"
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="normal"
          style={
            Object {
              "fill": "gray",
              "stokeWidth": "2px",
              "stroke": "gray",
            }
          }
          testing={true}
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width=""
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle tooltipTriangleBottom Triangle__SVGView-bGJaTC kCZOgc"
            contentEditable={false}
            direction="up"
            disabled={false}
            height=""
            id=""
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "gray",
                "stokeWidth": "2px",
                "stroke": "gray",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width=""
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </Triangle__SVGView>
      </ThemeProvider>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location bottomLeft 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="bottomLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-tooltip tooltip tooltipBottomLeft tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleBottomLeft"
      contentEditable={false}
      direction="up"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#ffe11a",
          }
        }
      >
        <Triangle__SVGView
          className="ui-triangle tooltipTriangleBottomLeft"
          contentEditable={false}
          direction="up"
          disabled={false}
          focus={false}
          height=""
          id=""
          location="none"
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="normal"
          style={
            Object {
              "fill": "gray",
              "stokeWidth": "2px",
              "stroke": "gray",
            }
          }
          testing={true}
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width=""
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle tooltipTriangleBottomLeft Triangle__SVGView-bGJaTC kCZOgc"
            contentEditable={false}
            direction="up"
            disabled={false}
            height=""
            id=""
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "gray",
                "stokeWidth": "2px",
                "stroke": "gray",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width=""
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </Triangle__SVGView>
      </ThemeProvider>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location bottomRight 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="bottomRight"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-tooltip tooltip tooltipBottomRight tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleBottomRight"
      contentEditable={false}
      direction="up"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#ffe11a",
          }
        }
      >
        <Triangle__SVGView
          className="ui-triangle tooltipTriangleBottomRight"
          contentEditable={false}
          direction="up"
          disabled={false}
          focus={false}
          height=""
          id=""
          location="none"
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="normal"
          style={
            Object {
              "fill": "gray",
              "stokeWidth": "2px",
              "stroke": "gray",
            }
          }
          testing={true}
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width=""
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle tooltipTriangleBottomRight Triangle__SVGView-bGJaTC kCZOgc"
            contentEditable={false}
            direction="up"
            disabled={false}
            height=""
            id=""
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "gray",
                "stokeWidth": "2px",
                "stroke": "gray",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width=""
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </Triangle__SVGView>
      </ThemeProvider>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location middle 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="middle"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-tooltip tooltip tooltipMiddleRight tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleMiddleRight"
      contentEditable={false}
      direction="left"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#ffe11a",
          }
        }
      >
        <Triangle__SVGView
          className="ui-triangle tooltipTriangleMiddleRight"
          contentEditable={false}
          direction="left"
          disabled={false}
          focus={false}
          height=""
          id=""
          location="none"
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="normal"
          style={
            Object {
              "fill": "gray",
              "stokeWidth": "2px",
              "stroke": "gray",
            }
          }
          testing={true}
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width=""
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle tooltipTriangleMiddleRight Triangle__SVGView-bGJaTC imjpE"
            contentEditable={false}
            direction="left"
            disabled={false}
            height=""
            id=""
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "gray",
                "stokeWidth": "2px",
                "stroke": "gray",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width=""
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </Triangle__SVGView>
      </ThemeProvider>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location middleLeft 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="middleLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-tooltip tooltip tooltipMiddleLeft tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleMiddleLeft"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#ffe11a",
          }
        }
      >
        <Triangle__SVGView
          className="ui-triangle tooltipTriangleMiddleLeft"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          id=""
          location="none"
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="normal"
          style={
            Object {
              "fill": "gray",
              "stokeWidth": "2px",
              "stroke": "gray",
            }
          }
          testing={true}
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width=""
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle tooltipTriangleMiddleLeft Triangle__SVGView-bGJaTC kxFkbh"
            contentEditable={false}
            direction="right"
            disabled={false}
            height=""
            id=""
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "gray",
                "stokeWidth": "2px",
                "stroke": "gray",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width=""
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </Triangle__SVGView>
      </ThemeProvider>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location middleRight 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="middleRight"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-tooltip tooltip tooltipMiddleRight tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleMiddleRight"
      contentEditable={false}
      direction="left"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#ffe11a",
          }
        }
      >
        <Triangle__SVGView
          className="ui-triangle tooltipTriangleMiddleRight"
          contentEditable={false}
          direction="left"
          disabled={false}
          focus={false}
          height=""
          id=""
          location="none"
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="normal"
          style={
            Object {
              "fill": "gray",
              "stokeWidth": "2px",
              "stroke": "gray",
            }
          }
          testing={true}
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width=""
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle tooltipTriangleMiddleRight Triangle__SVGView-bGJaTC imjpE"
            contentEditable={false}
            direction="left"
            disabled={false}
            height=""
            id=""
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "gray",
                "stokeWidth": "2px",
                "stroke": "gray",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width=""
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </Triangle__SVGView>
      </ThemeProvider>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location none 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-tooltip tooltip tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className=""
      contentEditable={false}
      direction="down"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#ffe11a",
          }
        }
      >
        <Triangle__SVGView
          className="ui-triangle"
          contentEditable={false}
          direction="down"
          disabled={false}
          focus={false}
          height=""
          id=""
          location="none"
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="normal"
          style={
            Object {
              "fill": "gray",
              "stokeWidth": "2px",
              "stroke": "gray",
            }
          }
          testing={true}
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width=""
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle Triangle__SVGView-bGJaTC cPVJEV"
            contentEditable={false}
            direction="down"
            disabled={false}
            height=""
            id=""
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "gray",
                "stokeWidth": "2px",
                "stroke": "gray",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width=""
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </Triangle__SVGView>
      </ThemeProvider>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location top 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="top"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-tooltip tooltip tooltipTop tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleTop"
      contentEditable={false}
      direction="down"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#ffe11a",
          }
        }
      >
        <Triangle__SVGView
          className="ui-triangle tooltipTriangleTop"
          contentEditable={false}
          direction="down"
          disabled={false}
          focus={false}
          height=""
          id=""
          location="none"
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="normal"
          style={
            Object {
              "fill": "gray",
              "stokeWidth": "2px",
              "stroke": "gray",
            }
          }
          testing={true}
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width=""
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle tooltipTriangleTop Triangle__SVGView-bGJaTC cPVJEV"
            contentEditable={false}
            direction="down"
            disabled={false}
            height=""
            id=""
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "gray",
                "stokeWidth": "2px",
                "stroke": "gray",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width=""
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </Triangle__SVGView>
      </ThemeProvider>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location topLeft 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="topLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-tooltip tooltip tooltipTopLeft tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleTopLeft"
      contentEditable={false}
      direction="down"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#ffe11a",
          }
        }
      >
        <Triangle__SVGView
          className="ui-triangle tooltipTriangleTopLeft"
          contentEditable={false}
          direction="down"
          disabled={false}
          focus={false}
          height=""
          id=""
          location="none"
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="normal"
          style={
            Object {
              "fill": "gray",
              "stokeWidth": "2px",
              "stroke": "gray",
            }
          }
          testing={true}
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width=""
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle tooltipTriangleTopLeft Triangle__SVGView-bGJaTC cPVJEV"
            contentEditable={false}
            direction="down"
            disabled={false}
            height=""
            id=""
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "gray",
                "stokeWidth": "2px",
                "stroke": "gray",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width=""
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </Triangle__SVGView>
      </ThemeProvider>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location topRight 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="topRight"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-tooltip tooltip tooltipTopRight tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleTopRight"
      contentEditable={false}
      direction="down"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#ffe11a",
          }
        }
      >
        <Triangle__SVGView
          className="ui-triangle tooltipTriangleTopRight"
          contentEditable={false}
          direction="down"
          disabled={false}
          focus={false}
          height=""
          id=""
          location="none"
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="normal"
          style={
            Object {
              "fill": "gray",
              "stokeWidth": "2px",
              "stroke": "gray",
            }
          }
          testing={true}
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width=""
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle tooltipTriangleTopRight Triangle__SVGView-bGJaTC cPVJEV"
            contentEditable={false}
            direction="down"
            disabled={false}
            height=""
            id=""
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "gray",
                "stokeWidth": "2px",
                "stroke": "gray",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width=""
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </Triangle__SVGView>
      </ThemeProvider>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of a Tooltip control 1`] = `
<div
  className="ui-tooltip tooltip tooltipMiddleRight tooltipShow inherit test-class"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
>
  <span
    className="ui-tooltip-content inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span>
      Test Text
    </span>
  </span>
  <Triangle
    className="tooltipTriangleMiddleRight"
    contentEditable={false}
    direction="left"
    disabled={false}
    focus={false}
    height=""
    id=""
    location="none"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    selected={false}
    sizing="normal"
    style={
      Object {
        "fill": "gray",
        "stroke": "gray",
      }
    }
    testing={true}
    visible={true}
    width=""
    xcss={null}
  />
</div>
`;

exports[`Test disabling of a Tooltip 1`] = `
<div
  className="ui-tooltip tooltip tooltipMiddleRight tooltipHide inherit disabled nohover"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
>
  <span
    className="ui-tooltip-content inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  />
  <Triangle
    className="tooltipTriangleMiddleRight"
    contentEditable={false}
    direction="left"
    disabled={false}
    focus={false}
    height=""
    id=""
    location="none"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    selected={false}
    sizing="normal"
    style={
      Object {
        "fill": "gray",
        "stroke": "gray",
      }
    }
    testing={true}
    visible={true}
    width=""
    xcss={null}
  />
</div>
`;

exports[`Test making a Tooltip invisible 1`] = `
<div
  className="ui-tooltip tooltip tooltipMiddleRight tooltipHide inherit invisible"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
>
  <span
    className="ui-tooltip-content inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  />
  <Triangle
    className="tooltipTriangleMiddleRight"
    contentEditable={false}
    direction="left"
    disabled={false}
    focus={false}
    height=""
    id=""
    location="none"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    selected={false}
    sizing="normal"
    style={
      Object {
        "fill": "gray",
        "stroke": "gray",
      }
    }
    testing={true}
    visible={true}
    width=""
    xcss={null}
  />
</div>
`;

exports[`Test retrieval of Tooltip props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "middleRight",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "selected": false,
  "show": false,
  "sizing": "inherit",
  "style": Object {
    "backgroundColor": "gray",
    "color": "white",
  },
  "testing": true,
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
